--- a/src/sample/end.fxml
+++ b/src/sample/end.fxml
@@ -18,25 +18,30 @@
             <Image url="@assets/party.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="99.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations" textAlignment="CENTER">
+      <Text fill="WHITE" layoutX="99.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Congratulations" textAlignment="CENTER">
          <font>
             <Font size="31.0" />
          </font>
       </Text>
-      <Text fx:id="winner" fill="WHITE" layoutX="135.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="player1" textAlignment="CENTER" wrappingWidth="144.3890380859375">
+      <Text fx:id="winner" fill="WHITE" layoutX="136.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="player1" textAlignment="CENTER" wrappingWidth="144.3890380859375">
          <font>
             <Font size="33.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="112.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Better luck next time" textAlignment="CENTER" wrappingWidth="190.10980224609375">
+      <Text fill="WHITE" layoutX="112.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Better luck next time" textAlignment="CENTER" wrappingWidth="190.10980224609375">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <Text fx:id="looser" fill="WHITE" layoutX="135.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="player2" textAlignment="CENTER" wrappingWidth="144.3890380859375">
+      <Text fx:id="looser" fill="WHITE" layoutX="135.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" text="player2" textAlignment="CENTER" wrappingWidth="144.3890380859375">
          <font>
             <Font size="19.0" />
          </font>
       </Text>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="108.0" layoutY="133.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/giphy.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
