--- a/src/sample/end.fxml
+++ b/src/sample/end.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +9,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.End">
    <children>
-      <ImageView fx:id="bckgrnd" fitHeight="416.0" fitWidth="415.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="bckgrnd" fitHeight="523.0" fitWidth="415.0" pickOnBounds="true">
          <image>
             <Image url="@assets/backdrop.jpg" />
          </image>
@@ -43,5 +44,10 @@
             <Image url="@assets/giphy.gif" />
          </image>
       </ImageView>
+      <Button fx:id="restart" layoutX="163.0" layoutY="437.0" mnemonicParsing="false" onAction="#again" onMouseExited="#removeButtonSkin" onMouseMoved="#setButtonSkin" text="PLAY AGAIN">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
